# vpl

./: CMakeLists.txt  README  config.h.in
base/: CMakeLists.txt
base/examples/: CMakeLists.txt  logExample.cpp  pathExample.cpp
base/include/: vpl.h  vplAffineMatrix.h  vplArray.h  vplConfig.h  vplGeneratedConfig.h  vplList.h  vplLog.h  vplMap.h  vplMemory.h  vplPath.h  vplRect.h  vplRedBlackTree.h  vplString.h  vplStroke.h  vplVector.h
base/src/: vplAffineMatrix.cpp  vplAsm32.asm  vplAsm64.asm  vplLog.cpp  vplPath.cpp  vplStroke.cpp  vplVector.cpp
base/src/asm/: CMakeLists.txt  vplAsm.asm  vplAsm.inc  vplAsm32.asm  vplAsm64.asm
render/: CMakeLists.txt
render/examples/: CMakeLists.txt  CMakeLists.txt.bak  SVGParser.cpp  SVGParser.h  blendExample.cpp  clipExample.cpp  exampleUtils.cpp  exampleUtils.h  gradientExample.cpp  svgExample.cpp
render/examples/cmake/: FindSFML.cmake
render/include/: vplColor.h  vplGradient.h  vplRender.h
render/src/: vplBlend.asm  vplBlend.cpp  vplBlend.h  vplBlend32.asm  vplBlend64.asm  vplBlendSrc.asm  vplColorHelper.h  vplEdge.h  vplEdgeGenerator.cpp  vplEdgeGenerator.h  vplEvenOddMaskGenerator.cpp  vplEvenOddMaskGenerator.h  vplFill.cpp  vplFill.h  vplFixedPoint.h  vplGradient.cpp  vplHorizontalSpan.h  vplNonZeroMask.h  vplNonZeroMaskGenerator.cpp  vplNonZeroMaskGenerator.h  vplPixelBuffer.cpp  vplPixelCoverage.h  vplPng.cpp  vplRender.cpp  vplRenderer.cpp  vplSampleMasks.h  vplScanLineList.cpp  vplScanLineList.h
